--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "langchain": "^1.1.5",
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
+    "pdf-parse": "^2.4.5",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
