--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
     "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.449",
     "radix-ui": "^1.4.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
