--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   "dependencies": {
     "@langchain/core": "^1.1.4",
     "@langchain/groq": "^1.0.2",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.87.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "langchain": "^1.1.5",
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
+    "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
     "pdfjs-dist": "^5.4.449",
     "radix-ui": "^1.4.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "recharts": "^2.15.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tesseract.js": "^6.0.1"
   },
